2009-09-06 10:47  rsbivand

	* DESCRIPTION, R/sp_gdal.R, ChangeLog, inst/ChangeLog: back out of
	  structure change in GDALinfo output

2009-09-03 15:03  rsbivand

	* DESCRIPTION, man/SpatialGDAL-class.Rd, man/readGDAL.Rd,
	  man/showWKT.Rd, ChangeLog, inst/ChangeLog: tidying docs links for
	  2.10.0

2009-09-02 20:33  rsbivand

	* DESCRIPTION, NAMESPACE, R/gdal.R, R/sp_gdal.R,
	  man/GDALRasterBand-class.Rd, man/readGDAL.Rd,
	  src/gdal-bindings.cpp, ChangeLog, inst/ChangeLog: extra
	  information on band type and helpers for signed/unsigned
	  conversion

2009-08-31 22:46  rsbivand

	* DESCRIPTION, R/gdal.R, R/sp_gdal.R, man/GDALRasterBand-class.Rd,
	  man/readGDAL.Rd, src/gdal-bindings.cpp: UInt16 as Int16 in LAN
	  problem

2009-08-17 13:56  rsbivand

	* DESCRIPTION, R/gdal.R, R/sp_gdal.R, man/GDALDataset-class.Rd,
	  man/GDALTransientDataset-class.Rd, man/readGDAL.Rd,
	  man/readOGR.Rd, ChangeLog, inst/ChangeLog: added copy only driver
	  detection and handling

2009-08-14 20:48  rsbivand

	* ChangeLog, R/sp_gdal.R, inst/ChangeLog: propagating fname fix for
	  RST driver requiring *.rst extension

2009-08-14 20:17  rsbivand

	* DESCRIPTION, R/gdal.R, R/sp_gdal.R, man/readGDAL.Rd: propagating
	  fname fix for RST driver requiring *.rst extension

2009-08-09 15:28  rsbivand

	* DESCRIPTION, R/gdal.R, R/sgdf_gdal.R, R/sp_gdal.R,
	  man/GDALDataset-class.Rd, man/GDALReadOnlyDataset-class.Rd,
	  man/SpatialGDAL-class.Rd, man/readGDAL.Rd, src/gdal-bindings.cpp,
	  ChangeLog, inst/ChangeLog: altered CPL default to use REprintf

2009-08-09 09:42  rsbivand

	* R/gdal.R, src/gdal-bindings.cpp, ChangeLog, inst/ChangeLog:
	  altered CPL default to use REprintf

2009-08-08 20:48  rsbivand

	* src/gdal-bindings.cpp, ChangeLog, inst/ChangeLog: altered CPL
	  default to use REprintf

2009-08-08 17:16  rsbivand

	* DESCRIPTION, R/gdal.R, src/gdal-bindings.cpp, ChangeLog,
	  inst/ChangeLog: allowing error handler switch for opening GDAL