@@ -1,3 +1,12 @@
+2009-10-04 21:30  rsbivand
+
+	* DESCRIPTION, R/sp_gdal.R: bug fix in grid parameters for offset,
+	  region and decimation together
+
+2009-09-09 08:41  rsbivand
+
+	* ChangeLog, inst/ChangeLog: tidy
+
 2009-09-06 10:47  rsbivand
 
 	* DESCRIPTION, R/sp_gdal.R, ChangeLog, inst/ChangeLog: back out of
